# intro-to-ai

./: .hgignore  .hgsub  .hgsubstate  ImpactOnMedicine.tex  prob.asciidoc
examples/: TheSmith.lp  Yale.lp  blockworld.lp  magicSquare.lp
hw1/: ImpactOnMedicine.tex  Makefile  WrightJeremy.bib
hw15/: CMakeLists.txt  README  data1.txt  data2.txt  main.cpp
hw16/: hw16.tex
hw2/: ex_tsp.lp  muppets.lp  snow_motion.lp
hw5/: assignment.lp  assignment.lp.orig
hw6/: family.lp
hw7/: assignment7.lp  solver.lp
hw9/: muppet.lp
project/PartA/: LearningLog  Notes.asciidoc  Notes.html  TestConfiguration.txt  TestingLog  draw.py  graph.dot  syntax1.dot  wright_grammar4.txt  wright_jeremy.tar.bz2  wright_train.txt
project/PartA/phase0/: wright_dict.txt  wright_grammar5.txt  wright_learn.conf  wright_learn.out  wright_learn.txt  wright_syntax.txt  wright_train.txt
project/PartA/phase1/: wright_grammar1.txt  wright_syntax1.txt
project/PartA/phase2/: wright2_dict.txt  wright2_learn.txt  wright2_policy.out  wright_grammar2.txt  wright_learn2.txt
project/PartA/phase3/: wright3_dict.txt  wright3_learn.txt  wright3_policy.out  wright_grammar3.txt
project/PartA/phase4/: wright4_dict.txt  wright4_learn.txt  wright4_policy.out
project/PartA/samples/: RunConfiguration.txt  full_corpus.txt  sample_dict.txt  sample_policy_out.txt  sample_syntax.txt  sample_test.txt  sample_train.txt
